[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "find_quantity"
description = "find_quantity help solve calcuation of quantity."
version = "1.0.19"
authors = [ {name = "Salah Eddine Saoud", email = "saoud92@gmail.com"} ]
license = {file = "LICENSE"}
dependencies = [
    "duckdb>=1.5.2",
    'pyyaml',
]

[project.scripts]
find_quantity = "find_quantity.app:main"

[tool.setuptools.package-data]
"*" = ["*.yml"]
